<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    android:background="@color/darkGreen"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A propos"
        android:textAlignment="center"
        android:fontFamily="@font/sansita_regular"
        android:textColor="#FFFFFF"
        android:lineHeight="22dp"
        android:textSize="25dp"
        android:paddingBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auteurs"
        android:textColor="#FFFFFF"
        android:lineHeight="22dp"
        android:textSize="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contexte"
        android:lineHeight="22dp"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annee"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"/>

</LinearLayout>