<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- ========== ENTETE =========== -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="600dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="-200dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="200dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ovale_shape" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!-- ========== FIN ENTETE =========== -->

    <!-- ========== PAGE =========== -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ========== DEBUT ACCUEIL =========== -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:paddingRight="20dp"
                android:src="@drawable/logo_principal"
                />

            <ImageView
                android:id="@+id/btnRetour"
                android:layout_width="25dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/retour"
                />

            <TextView
                android:id="@+id/titre"
                android:text="@string/signup"
                android:fontFamily="@font/sansita_regular"
                android:textColor="@color/darkGreen"
                android:textSize="30dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_below="@id/logo"/>

            <EditText
                android:id="@+id/nomET"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_login"
                android:fontFamily="@font/inter"
                android:hint="@string/surname_hint"
                android:inputType="text"
                android:paddingLeft="53dp"
                android:textSize="16dp"
                android:layout_below="@+id/titre"
                />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/identite"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="-40dp"
                android:layout_below="@id/nomET"
                />

            <EditText
                android:id="@+id/prenomET"
                android:layout_width="290dp"
                android:layout_height="47dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/round_login"
                android:fontFamily="@font/inter"
                android:hint="@string/firstname_hint"
                android:inputType="text"
                android:paddingLeft="53dp"
                android:textSize="16dp"
                android:layout_below="@+id/nomET"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/utilisateur"
                android:layout_marginLeft="73dp"
                android:layout_marginTop="-37dp"
                android:layout_below="@id/prenomET"
                />

            <EditText
                android:id="@+id/jourET"
                android:layout_width="77dp"
                android:layout_height="48dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/round_login"
                android:fontFamily="@font/inter"
                android:hint="@string/day_hint"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="2"
                android:textSize="16dp"
                android:layout_below="@+id/prenomET"
                />

            <EditText
                android:id="@+id/moisET"
                android:layout_width="77dp"
                android:layout_height="48dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/round_login"
                android:fontFamily="@font/inter"
                android:hint="@string/month_hint"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="2"
                android:textSize="16dp"
                android:layout_below="@+id/prenomET"
                android:layout_toRightOf="@+id/jourET"
                />

            <EditText
                android:id="@+id/anneeET"
                android:layout_width="93dp"
                android:layout_height="47dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/round_login"
                android:fontFamily="@font/inter"
                android:hint="@string/year_hint"
                android:textAlignment="center"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="16dp"
                android:layout_below="@+id/prenomET"
                android:layout_toRightOf="@+id/moisET"
                />


            <androidx.cardview.widget.CardView
                android:id="@+id/btnSuite"
                android:layout_width="200dp"
                android:layout_height="40dp"
                app:cardBackgroundColor="@color/darkGreen"
                app:cardCornerRadius="6dp"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="102dp"
                android:layout_below="@+id/anneeET">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="@string/next_button"
                    android:textColor="@color/white"
                    android:textSize="17dp" />
            </androidx.cardview.widget.CardView>



            <TextView
                android:id="@+id/numeroPage"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-13dp"
                android:gravity="center"
                android:paddingTop="9dp"
                android:text="1/3"
                android:fontFamily="@font/inter"
                android:textColor="@color/grey"
                android:textSize="20dp"
                android:layout_below="@+id/btnSuite"
                android:layout_toRightOf="@id/btnSuite"
                />

            <View
                android:id="@+id/ligne1"
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="42dp"
                android:background="@color/darkGreen"
                android:layout_below="@+id/btnSuite"
                />

            <TextView
                android:id="@+id/ou"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="176dp"
                android:layout_marginTop="19dp"
                android:gravity="center"
                android:paddingTop="9dp"
                android:text="@string/or"
                android:fontFamily="@font/inter"
                android:textColor="@color/grey"
                android:textSize="20dp"
                android:layout_below="@+id/btnSuite"
                />

            <View
                android:id="@+id/ligne2"
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:layout_marginTop="42dp"
                android:layout_marginLeft="235dp"
                android:background="@color/darkGreen"
                android:layout_below="@+id/btnSuite"
                />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/darkGrey"
                android:text="@string/already_have_account"
                android:layout_below="@+id/ligne1"
                />

            <TextView
                android:id="@+id/btnConnexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text3"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:textSize="17dp" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/progressVert"
            android:layout_width="130dp"
            android:layout_height="23dp"
            android:layout_marginTop="-21dp"
            android:backgroundTint="@color/darkGreen"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/progressBlanc"
            android:layout_width="262dp"
            android:layout_height="24dp"
            android:layout_marginTop="-23dp"
            android:layout_marginLeft="130dp"
            android:backgroundTint="@color/lightGrey"
            android:layout_gravity="right"
            />

    </LinearLayout>
</LinearLayout>
